qemu-tests/tests/snapshots/versatileab/abt-exception-t32-armv4t-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is an data abort exception example
data abort occurred
caught unaligned_from_t32
Doing it again
data abort occurred
caught unaligned_from_t32
Skipping instruction
Recovered from fault OK!
