qemu-tests/tests/snapshots/versatileab/hello-thumbv7r-none-eabihf.snap
---
source: qemu-tests/tests/versatileab.rs
expression: stdout
---
Hello, this is semihosting! x = 1.000, y = 2.000
PANIC: PanicInfo {
    message: I am an example panic,
    location: Location {
        file: "src/bin/hello.rs",
        line: 20,
        column: 5,
    },
    can_unwind: true,
    force_no_backtrace: false,
}
