qemu-tests/tests/snapshots/versatileab/prefetch-exception-a32-armv4t-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a prefetch abort exception example
prefetch abort occurred
caught bkpt_from_a32
Doing it again
prefetch abort occurred
caught bkpt_from_a32
Skipping instruction
Recovered from fault OK!
